# price-tracker

./: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  pyproject.toml  tox.ini
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
ptrack/: .gitignore  __init__.py  cli.py
ptrack/.gitlab/issue_templates/: default.md
ptrack/.gitlab/merge_request_templates/: default.md
ptrack/utils/: logutils.py  misc.py  viz.py
scripts/: build.sh  clean.sh  env.sh  log-env-variables.sh
tests/: __init__.py  test_ptrack.py
